<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.person_screen.PersonFragment">

        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/purple_700"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <TextView
            android:id="@+id/first_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/first_name_et"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/avatar_iv" />

        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/last_name_tv"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/first_name_tv" />

        <TextView
            android:id="@+id/last_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            app:layout_constraintBottom_toTopOf="@+id/last_name_et"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/first_name_et" />

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/email_tv"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/last_name_tv" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/email_et"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/last_name_et" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/save_btn"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/email_tv" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_btn"
            app:layout_constraintStart_toStartOf="@id/content_start" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel_btn"
            app:layout_constraintStart_toEndOf="@id/save_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/delete_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>